statefullset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nginx-state
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx-service
          image: nginx:latest
          ports:
            - containerPort: 80
