ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "app.bodigams.xyz"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-node-service
            port:
              number: 31666
